--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,1 +1,21 @@
 @import "tailwindcss";
+
+@keyframes heartBeat {
+  0% {
+    transform: scale(1)
+  }
+  50% {
+    transform: scale(1.25)
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.heart {
+  color: gray;
+}
+
+.heart:hover {
+  animation: heartBeat 1s infinite;
+}
