--- a/client/src/index.css
+++ b/client/src/index.css
@@ -24,3 +24,13 @@
   border-radius: 50%;
   background-color: rgb(255, 0, 0, 0.4);
 }
+
+input.no-spinner::-webkit-outer-spin-button,
+input.no-spinner::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input.no-spinner {
+  -moz-appearance: textfield;
+}
